Changelog
=========


1.1.1 (unreleased)
------------------

- Nothing changed yet.


1.1.0 (2014-07-19)
------------------

- Add "index" option, so that pypi mirrors can be used.
  [jone]

- Fix typo in readme in example, thanks @mauritsvanrees for reporting.
  [jone]


1.0.0 (2014-04-27)
------------------

- Initial implementation.
  [jone]