@@ -5,7 +5,8 @@ Changelog
 1.1.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Show previous version as comment in proposed updates.
+  [jone]
 
 
 1.1.0 (2014-07-19)
